--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-hello
+<html>
+<head><title>index</title></head>
+<body bgcolor=#000000>
+<pre style=color:#FFFFFF>
+
+#####################
+## alcopaul's page ##
+#####################
+
+"153pisces, 5655pulsar, brigada ocho, w32.perrun, 
+the epiphone guitar sex scandal, punkin' donuts, 
+team verdigris, your math teacher, team barney, 
++apo, ruby soho, shamans of talim island, 
+black sun yellow moon, team barys"
+
+twitter: /thealcopaul
+instagram: /belial100
+
+8/6/2015
+
+</pre>
+</body>
+</html>
+
