--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ team verdigris, your math teacher, team barney,
 black sun yellow moon, team barys"
 
 twitter: /thealcopaul
-instagram: /belial100
+instagram: /belial100 & /cannibalhell
 
 8/6/2015
 
