--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@ team verdigris, your math teacher, team barney,
 black sun yellow moon, team barys"
 
 twitter: /thealcopaul
-instagram: /belial100 & /cannibalhell
+instagram: /belial100
 
+nyc
 8/6/2015
 
 </pre>
