--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ team verdigris, your math teacher, team barney,
 black sun yellow moon, team barys"
 
 twitter: /thealcopaul
-instagram: /belial100
+instagram: /cannibalhell
 
 nyc
-8/6/2015
+12/15/2015
 
 </pre>
 </body>
