--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 the epiphone guitar sex scandal, punkin' donuts, 
 team verdigris, your math teacher, team barney, 
 +apo, ruby soho, shamans of talim island, 
-black sun yellow moon, team barys, 186mobzta"
+black sun yellow moon, team barys, 186mobzta,
+the cigarettes, predatory season, los indios bravos,
+the demons of zor, gnosticism, the philippine islands,
+descensus christi ad inferos, console cowboys"
 
 twitter: /thealcopaul
 instagram: /cannibalhell
 
 nyc
-12/27/2015
+1/13/2016
 
 <img src="https://s-media-cache-ak0.pinimg.com/originals/5e/20/1d/5e201da8ae8b6578f43354ea41d6cab1.png">
 
