--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ the cigarettes, predatory season, los indios bravos,
 the demons of zor, gnosticism, the philippine islands,
 descensus christi ad inferos, console cowboys"
 
-twitter: /thealcopaul
-instagram: /cannibalhell
+twitter: @thealcopaul
+instagram: @cannibalhell
 
 nyc
 1/13/2016
