--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ team verdigris, your math teacher, team barney,
 black sun yellow moon, team barys, 186mobzta,
 the cigarettes, predatory season, los indios bravos,
 the demons of zor, gnosticism, the philippine islands,
-descensus christi ad inferos, console cowboys"
+descensus christi ad inferos, console cowboys,
+cyanlocobalamines, nine balls"
 
 twitter: @thealcopaul
 instagram: @cannibalhell
