--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ black sun yellow moon, team barys, 186mobzta,
 the cigarettes, predatory season, los indios bravos,
 the demons of zor, gnosticism, the philippine islands,
 descensus christi ad inferos, console cowboys,
-cyanlocobalamines, nine balls, i11uminati"
+cyanlocobalamines, nine balls, i11uminati, choking gas,
+rage of the ntouka, frozen soil, quickening zephyr"
 
 twitter: @thealcopaul
 instagram: @cannibalhell
