--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-吃大頭
+<img src="pic_mountain.jpg">
 
 twitter: @thealcopaul
 instagram: @cannibalhell
