--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-<img src="https://github.com/alcopaul/perrun/blob/master/pic_mountain.png">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/pic_mountain.png">
 
 twitter: @thealcopaul
 instagram: @cannibalhell
