--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 ## alcopaul's page ##
 #####################
 
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/pic_mountain.png">
+<img src="http://nihfex.neocities.org/nihfexlogo.jpg">
 
 twitter: @thealcopaul
 instagram: @cannibalhell
 
-the bronx, nyc
-3/24/2016
+nyc
+5/1/2016
 
 </pre>
 </body>
