--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 twitter: @thealcopaul
 instagram: @cannibalhell
+tumblr: @alcopaul
+wordpress: @cannibalhell
 
 nyc
-5/1/2016
+8/1/2016
 
 </pre>
 </body>
