--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>index</title></head>
-<body bgcolor=#000000>
-<pre style=color:#FFFFFF>
+<body bgcolor=#CDCD28>
+<pre style=color:#000000>
 
 #####################
 ## alcopaul's page ##
