--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
+house of guillermo [gimo]
+guillermo
+helen
+paul
+syra
+olena
+shira
+barack
+frank
+ladan
+dmitri
+ariella
+jose
+mutya
+manuel
+
 uphaz
 9/8/2016
 
