--- a/index.html
+++ b/index.html
@@ -32,9 +32,18 @@ kylie
 sanya
 kathryn
 arys
+paris
+stefani
+kesha
+peter
+andrew
+jabir
+ellen
+laozi
+
 
 uphaz
-9/27/2016
+11/01/2016
 
 </pre>
 </body>
