--- a/index.html
+++ b/index.html
@@ -7,43 +7,55 @@
 ## alcopaul's page ##
 #####################
 
+- grand master of the supreme order of the black phoenix
+- console cowboy of mystic indigo [YHo]
+
 twitter: @thealcopaul
 instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-house of guillermo [gimo]
+house of guillermo [GIMO]
 
-guillermo
-helen
-paul
-syra
-olena
-shira
-barack
-frank
-ladan
-dmitri
-ariella
-jose
-mutya
-manuel
-kylie
-sanya
-kathryn
-arys
-paris
-stefani
-kesha
-peter
-andrew
-jabir
-ellen
-laozi
-
+0 - guillermo
+1 - helen
+2 - paul
+3 - syra
+4 - olena
+5 - shira
+6 - barack
+7 - frank
+8 - ladan
+9 - dmitri
+A - ariella
+B - jose
+C - mutya
+D - manuel
+E - kylie
+F - sanya
+G - kathryn
+H - arys
+I = paris
+J - stefani
+K - kesha
+L - peter
+M - andrew
+N - jabir
+O - ellen
+P - laozi
+Q - joseph
+R - mary
+S - anthony
+T - teresita
+U - christopher
+V - hillary
+W - melquiades
+X - catalina
+Y - avelino
+Z - villaflor
 
 uphaz
-11/01/2016
+11/12/2016
 
 </pre>
 </body>
