--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-- grand master of the supreme order of the black phoenix
+- grand master of the sacred order of the black phoenix
 - console cowboy of mystic indigo [YHo]
 
 twitter: @thealcopaul
@@ -15,7 +15,7 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-house of guillermo [GIMO]
+the sacred order of the black phoenix
 
 0 - guillermo
 1 - helen
@@ -55,7 +55,7 @@ Y - avelino
 Z - villaflor
 
 uphaz
-11/12/2016
+11/20/2016
 
 </pre>
 </body>
