--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@ W - melquiades
 X - catalina
 Y - avelino
 Z - villaflor
+. - anna
+? - coren
+! - kat
 
 uphaz
-11/23/2016
+12/04/2016
 
 </pre>
 </body>
