--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 ## alcopaul's page ##
 #####################
 
+- right hand of the house of guillermo [GIMO]
 - grand master of the sacred order of the black phoenix
 - console cowboy of mystic indigo [YHo]
 
@@ -58,7 +59,7 @@ Z - villaflor
 ! - kat
 
 uphaz
-12/04/2016
+12/10/2016
 
 </pre>
 </body>
