--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ Z - villaflor
 . - anna
 ? - coren
 ! - kat
-sophie  - א
-shakira - ב
-alissa  - ג
-lorde   - ד
+shakira - א
+sophie  - ב
+lorde   - ג
+alissa  - ד
 katy    - ה
 paris   - ו
-- ז
+pink    - ז
 
 uphaz
 12/11/2016
