--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-- right hand of the house of guillermo [GIMO]
+- right hand of house of guillermo [GIMO]
 - grand master of the sacred order of the black phoenix
 - console cowboy of mystic indigo [YHo]
 
@@ -16,7 +16,7 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-the sacred order of the black phoenix
+house of guillermo [GIMO]
 
 0 - guillermo
 1 - helen
