--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-house of guillermo [GIMO]
+the sacred order of the black phoenix
 
 0 - guillermo
 1 - helen
