--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ Z - villaflor
 . - anna
 ? - coren
 ! - kat
-suzanne - א
-sophie  - ב
-lorde   - ג
-alissa  - ד
-katy    - ה
-paris   - ו
-pink    - ז
+α - suzanne
+β - sophie
+γ - lorde
+δ - alissa
+ε - katy
+ϛ - paris
+ζ - pink
 
 uphaz
 12/11/2016
