--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ Z - villaflor
 . - anna
 ? - coren
 ! - kat
-α - shakira
-β - sophie
-γ - lorde
-δ - alissa
-ε - katy
-ϛ - precious
-ζ - pink
+а - shakira
+в - sophie
+г - lorde
+д - alissa
+є - katy
+ѕ - precious
+з - pink
 
 uphaz
 12/12/2016
