--- a/index.html
+++ b/index.html
@@ -64,9 +64,16 @@ Z - villaflor
 є - katy
 ѕ - precious
 з - pink
+η - pepe
+θ - babatunde
+ι - mao
+κ - fusajiro
+λ - ferdinand
+μ - karl
+ν - karol
 
 uphaz
-12/13/2016
+12/14/2016
 
 </pre>
 </body>
