--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-the sacred order of the black phoenix
+<img src="pic_mountain.jpg" alt="Mountain View">
 
 0 - guillermo
 1 - helen
