--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @cannibalhell
 
-<img src="pic_mountain.jpg" alt="Mountain View">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View">
 
 0 - guillermo
 1 - helen
