--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@ F - sanya
 G - kathryn
 H - arys
 I = gertrudes
-J - stefani
-K - kesha
+J - sophie
+K - lorde
 L - peter
 M - andrew
 N - jabir
-O - ellen
+O - precious
 P - laozi
 Q - joseph
 R - mary
 S - anthony
 T - grace
 U - christopher
-V - hillary
+V - iggy
 W - melquiades
 X - catalina
 Y - avelino
 Z - villaflor
-. - anna
-? - coren
-! - kat
-а - shakira
-в - sophie
-г - lorde
-д - alissa
-є - katy
-ѕ - precious
-з - pink
+. - john
+? - emma
+! - andres
+а - fernando
+в - isaac
+г - jessie
+д - gottfried
+є - fidel
+ѕ - erap
+з - natalie
 η - pepe
 θ - babatunde
 ι - mao
