--- a/index.html
+++ b/index.html
@@ -37,41 +37,51 @@ F - sanya
 G - kathryn
 H - arys
 I = gertrudes
-J - sophie
-K - lorde
-L - peter
-M - andrew
-N - jabir
-O - precious
-P - laozi
-Q - joseph
-R - mary
-S - anthony
-T - grace
-U - christopher
-V - iggy
+J - grace
+K - jabir
+L - laozi
+M - precious
+N - andres
+O - joseph
+P - mary
+Q - anthony
+R - christopher
+S - catalina
+T - villaflor
+U - lorde
+V - sophie
 W - melquiades
-X - catalina
-Y - avelino
-Z - villaflor
-. - john
-? - emma
-! - andres
-а - fernando
-в - isaac
-г - jessie
-д - gottfried
-є - fidel
-ѕ - erap
-з - natalie
-η - pepe
-θ - babatunde
-ι - mao
-κ - fusajiro
-λ - ferdinand
-μ - karl
-ν - karol
-
+X - avelino
+Y - gottfried
+Z - isaac
+α - fernando
+β - john
+γ - iggy
+δ - jessie
+ε - natalie
+ϝ - emma
+ζ - peter
+η - andrew
+θ - pepe
+ι - karl
+κ - karol
+λ - babatunde
+μ - ferdinand
+ν - erap
+ξ - fidel
+ο - mao
+π - fusajiro
+ϻ - ellen 
+ϙ - coleen
+ρ - kristine
+σ - andi
+τ - venus
+υ - shamcey
+φ - janine
+χ - solenn
+ψ - kim
+ω - yeng
+ϡ - kz
 uphaz
 1/4/2016
 
