--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Z - isaac
 γ - iggy
 δ - jessie
 ε - natalie
-ϝ - emma
+ϛ - emma
 ζ - peter
 η - andrew
 θ - pepe
@@ -72,7 +72,7 @@ Z - isaac
 ο - mao
 π - fusajiro
 ϻ - ellen 
-ϙ - coleen
+ϟ - coleen
 ρ - kristine
 σ - andi
 τ - venus
