--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 ## alcopaul's page ##
 #####################
 
-- grand master of the sacred order of the black phoenix
-- right hand of house of guillermo [GIMO]
-- console cowboy of mystic indigo [YHo]
+- Grand Master of The Sacred Order Of The Black Phoenix [8Ga]
+- The Right Hand of House Of Guillermo [GIMO]
+- rubidus of Mystic Indigo [YHo]
+- Master Strategist of Katipunan [KKK]
+- Li Tuang Chi of I O O [KAMI]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
@@ -73,9 +75,9 @@ Z - isaac
 π - fusajiro
 ϻ - ellen 
 ϟ - coleen
-ρ - kristine
+ρ - juday
 σ - andi
-τ - venus
+τ - valerie
 υ - shamcey
 φ - janine
 χ - solenn
@@ -89,4 +91,3 @@ uphaz
 </pre>
 </body>
 </html>
-
