--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 - rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
+- Leviathan of Filipino Batak [Og]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
