--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-- Grand Master of The Sacred Order Of The Black Phoenix [8Ga]
+- Grand Master of The Sacred Order Of The Black Phoenix [Ga8]
 - The Right Hand of House Of Guillermo [GIMO]
 - rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
