--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@ Z - isaac
 ξ - fidel
 ο - mao
 π - fusajiro
-ϻ - ellen 
+ϻ - arci 
 ϟ - coleen
 ρ - juday
 σ - andi
 τ - valerie
-υ - shamcey
+υ - julia
 φ - janine
 χ - solenn
 ψ - kim
 ω - yeng
-ϡ - kz
+ϡ - maja
 
 uphaz
 1/5/2016
