--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 ## alcopaul's page ##
 #####################
 
+- Morning Star of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [Ga8]
-- The Right Hand of House Of Guillermo [GIMO]
 - rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
