--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ## alcopaul's page ##
 #####################
 
-- Morning Star of House Of Guillermo [GIMO]
+- Cu of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [Ga8]
 - rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
