--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ J - grace
 K - jabir
 L - laozi
 M - precious
-N - andres
+N - pepe
 O - joseph
 P - mary
-Q - anthony
-R - christopher
+Q - christopher
+R - anthony
 S - catalina
 T - villaflor
 U - lorde
@@ -65,7 +65,7 @@ Z - isaac
 ϛ - emma
 ζ - peter
 η - andrew
-θ - pepe
+θ - andres
 ι - karl
 κ - karol
 λ - babatunde
