--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>index</title></head>
-<body bgcolor=#CDCD28>
+<body bgcolor=#FF6A00>
 <pre style=color:#000000>
 
 #####################
@@ -9,7 +9,7 @@
 
 - Cu of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [Ga8]
-- rubidus of Mystic Indigo [YHo]
+- Rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Leviathan of Filipino Batak [Og]
