--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 #####################
 
 - Cu of House Of Guillermo [GIMO]
-- Grand Master of The Sacred Order Of The Black Phoenix [Ga8]
+- Grand Master of The Sacred Order Of The Black Phoenix [OGa]
 - Rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
