--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 - Rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
-- Hydra of Filipino Batak [Og]
+- Leviathan/Milas Two Oak of Filipino Batak [Og]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
