--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 - Rubidus of Mystic Indigo [YHo]
 - Master Strategist of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
-- Leviathan/Milas Two Oak of Filipino Batak [Og]
+- Gimhelios of Filipino Batak [Og]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
@@ -87,7 +87,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-1/8/2017
+1/9/2017
 
 </pre>
 </body>
