--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 - Cu of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [OGa]
 - Rubidus of Mystic Indigo [YHo]
-- Master Strategist of Katipunan [KKK]
+- Pablo del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Gimhelios/Cannibal Hell of Filipino Batak [Og]
 
@@ -87,7 +87,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-1/9/2017
+1/13/2017
 
 </pre>
 </body>
