--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 - Cu of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [OGa]
 - Rubidus of Mystic Indigo [YHo]
-- Pablo del Pilar of Katipunan [KKK]
+- P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Gimhelios/Cannibal Hell of Filipino Batak [Og]
 
