--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 - Rubidus of Mystic Indigo [YHo]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
-- Gimhelios/Cannibal Hell of Filipino Batak [Og]
+- Gimhelios/Cannibal Hell of Filipino Illuminati [CKQ]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
