--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 - Cu of House Of Guillermo [GIMO]
 - Grand Master of The Sacred Order Of The Black Phoenix [OGa]
-- Rubidus of Mystic Indigo [YHo]
+- rubidus of Mystic Indigo [YHo]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
-- Gimhelios/Cannibal Hell of Filipino Illuminati [CKQ]
+- mason619 of Filipino Illuminati [CKQ]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
