--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 ## alcopaul's page ##
 #####################
 
-- Grand Master of The Sacred Order Of The Black Phoenix [OGa]
+- Y of The Sacred Order Of The Black Phoenix [OGa]
 - Cu of House Of Guillermo [GIMO]
 - rubidus of Mystic Indigo [YHo]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - mason619 of Filipino Illuminati [CKQ]
+- Gimhelios/Cannibal Hell of Filipino Batak [Og]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
