--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - mason619 of Filipino Illuminati [CKQ]
-- Gimhelios/Cannibal Hell of Filipino Batak [Og]
+- Gimhelios/Cannibal Hell of Filipino Batak [ZOR]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
