--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 ## alcopaul's page ##
 #####################
 
-- Y of The Sacred Order Of The Black Phoenix [OGa]
+- Paul of The Sacred Order Of The Black Phoenix [OGa]
 - Cu of House Of Guillermo [GIMO]
-- rubidus of Mystic Indigo [YHo]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
+- Milas Two Oak of Filipino Batak [Ts]
 - mason619 of Filipino Illuminati [CKQ]
-- Gimhelios/Cannibal Hell of Filipino Batak [ZOR]
+- rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
@@ -88,7 +88,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-1/14/2017
+1/15/2017
 
 </pre>
 </body>
