--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 #####################
 
 - Paul of The Sacred Order Of The Black Phoenix [OGa]
-- Cu of House Of Guillermo [GIMO]
+- Silverio of House Of Guillermo [GIMO]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
