--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
-- mason619 of Filipino Illuminati [CQK]
+- mason619 of C Of K [CQK]
 - rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
