--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 #####################
 
 - Paul of The Sacred Order Of The Black Phoenix [OGa]
-- Silverio of House Of Guillermo [GIMO]
+- Ag of House Of Guillermo [GIMO]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
-- mason619 of C Of K [CQK]
+- Silverio of C Of K [CQK]
 - rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
