--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 - Paul of The Sacred Order Of The Black Phoenix [OGa]
 - Ag of House Of Guillermo [GIMO]
+- Silverio of C Of K [QKC]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
-- Silverio of C Of K [CQK]
-- rubidus of Mystic Indigo [YHo]
+- Rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
