--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 ## alcopaul's page ##
 #####################
 
-- Paul of The Sacred Order Of The Black Phoenix [SOBP]
+- Paul of The Sacred Order Of The Black Phoenix [sObP]
 - Argentum of House Of Guillermo [GIMO]
-- Silverio of Church Of Katrina [QKC]
+- Silverio of Church Of Katrina [CQK]
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
