--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 - P. G. del Pilar of Katipunan [KKK]
 - Li Tuang Chi of I O O [KAMI]
 - Milas Two Oak of Filipino Batak [Ts]
-- Kyanos of Mystic Indigo [YHo]
+- Rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
@@ -88,7 +88,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-1/17/2017
+1/21/2017
 
 </pre>
 </body>
