--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <html>
 <head><title>index</title></head>
-<body bgcolor=#FF6A00>
+<body>
 <pre style=color:#000000>
 
 #####################
 ## alcopaul's page ##
 #####################
-
-- Paul of The Sacred Order Of The Black Phoenix [sObP]
-- Argentum of House Of Guillermo [GIMO]
-- Silverio of Church Of Katrina [CQK]
-- P. G. del Pilar of Katipunan [KKK]
-- Li Tuang Chi of I O O [KAMI]
-- Milas Two Oak of Filipino Batak [Ts]
-- Rubidus of Mystic Indigo [YHo]
 
 twitter: @thealcopaul
 instagram: @cannibalhell
@@ -88,7 +80,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-1/21/2017
+02/04/2017
 
 </pre>
 </body>
