--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 ## alcopaul's page ##
 #####################
 
+- Commander, Company of K I L L E R S [CQK]
+
 twitter: @thealcopaul
 instagram: @cannibalhell
 tumblr: @alcopaul
