--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <body>
 <pre style=color:#000000>
 
-
 #####################
 ## alcopaul's page ##
 #####################
 
-- Commander, Company of K I L L E R S [CQK]
-
 twitter: @thealcopaul
 instagram: @cannibalhell
 tumblr: @alcopaul
-wordpress: @cannibalhell
+wordpress: @glenerson
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
@@ -83,8 +80,7 @@ Z - isaac
 ϡ - maja
 
 uphaz
-02/11/2017
-
+02/15/2017
 
 </pre>
 </body>
