--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ twitter: @thealcopaul
 instagram: @cannibalhell
 tumblr: @alcopaul
 wordpress: @glenerson
+soundcloud: @alcopaul
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
