--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 ## alcopaul's page ##
 #####################
 
-twitter: @thealcopaul
-instagram: @cannibalhell
-tumblr: @alcopaul
-wordpress: @glenerson
-soundcloud: @alcopaul
+twitter: https://twitter.com/thealcopaul
+instagram: https://www.instagram.com/cannibalhell/
+tumblr: http://alcopaul.tumblr.com/
+wordpress: https://glenerson.wordpress.com/
+soundcloud: https://soundcloud.com/alcopaul
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
