--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 ## alcopaul's page ##
 #####################
 
-twitter: https://twitter.com/thealcopaul
-instagram: https://www.instagram.com/cannibalhell/
-tumblr: http://alcopaul.tumblr.com/
-wordpress: https://glenerson.wordpress.com/
-soundcloud: https://soundcloud.com/alcopaul
+<a href="https://twitter.com/thealcopaul">twitter</a>
+<a href="https://www.instagram.com/cannibalhell/">instagram</a>
+<a href="http://alcopaul.tumblr.com/">tumblr</a>
+<a href="https://glenerson.wordpress.com/">wordpress</a>
+<a href="https://soundcloud.com/alcopaul">soundcloud</a>
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
