--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 ## alcopaul's page ##
 #####################
 
-<a href="https://twitter.com/thealcopaul">twitter</a>
-<a href="https://www.instagram.com/cannibalhell/">instagram</a>
-<a href="http://alcopaul.tumblr.com/">tumblr</a>
-<a href="https://glenerson.wordpress.com/">wordpress</a>
-<a href="https://soundcloud.com/alcopaul">soundcloud</a>
+<a href="https://twitter.com/thealcopaul" target="_blank">twitter</a>
+<a href="https://www.instagram.com/cannibalhell/" target="_blank">instagram</a>
+<a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
+<a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
+<a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
