--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
 <a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
+<a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/master/S.png" alt="Mountain View" />
 
@@ -81,7 +82,7 @@ Z - isaac
 ϡ - maja
 
 ophir
-02/18/2017
+4/1/2017
 
 </pre>
 </body>
