--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>index</title></head>
 <body>
-<pre style=color:#000000>
+<pre style=color:#C37600>
 
 #####################
 ## alcopaul's page ##
