--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <head><title>index</title></head>
-<body>
-<pre style=color:#C37600>
-
+<body style="background-color:#C37600">
+  
 #####################
 ## alcopaul's page ##
 #####################
@@ -17,6 +16,6 @@
 ophir
 6/21/2017
 
-</pre>
+
 </body>
 </html>
