--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head><title>index</title></head>
 <body style="background-color:#C37600">
+<pre>
   
 #####################
 ## alcopaul's page ##
@@ -16,6 +17,6 @@
 ophir
 6/21/2017
 
-
+</pre>
 </body>
 </html>
