--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head><title>index</title></head>
-<body style="background-color:#C37600">
+<body style="background-color:#FFFFFF">
 <pre>
+
+<img src="pic_mountain.jpg" alt="Mountain View">
   
 #####################
 ## alcopaul's page ##
