--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:#FFFFFF">
 <pre>
 
-<img src="pic_mountain.jpg" alt="Mountain View">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/Flag_of_the_Philippines.svg.png" alt="PINAS">
   
 #####################
 ## alcopaul's page ##
@@ -19,7 +19,7 @@ Le Club[As]
 <a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
 
 ophir
-6/21/2017
+7/2/2017
 
 </pre>
 </body>
