--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:#FFFFFF">
 <pre>
 
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/Flag_of_the_Philippines.svg.png" alt="PINAS">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/cnxn.png" alt="cnxn">
   
 #####################
 ## alcopaul's page ##
@@ -19,7 +19,7 @@ Le Club[As]
 <a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
 
 babylon
-7/17/2017
+11/25/2017
 
 </pre>
 </body>
