--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:#FFFFFF">
 <pre>
 
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/master/cnxn.png" alt="cnxn">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/me.png" alt="me">
   
 #####################
 ## alcopaul's page ##
