--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 Le Club[As]
 Digital Headhuntaz [aBrA]
+The Cutie [EGA]
 
 <a href="https://twitter.com/thealcopaul" target="_blank">twitter</a>
 <a href="https://www.instagram.com/cannibalhell/" target="_blank">instagram</a>
@@ -20,7 +21,7 @@ Digital Headhuntaz [aBrA]
 <a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
 
 babylon
-01/19/2018
+01/22/2018
 
 </pre>
 </body>
