--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ Le Club [As]
 Digital Headhuntaz [aBrA]
 The Cutie [EGA]
 
-<a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
+<a href="https://glenerson.blogspot.com/" target="_blank">blogspot</a>
 <a href="https://twitter.com/longint32" target="_blank">twitter</a>
-<a href="https://www.instagram.com/cannibalhell/" target="_blank">instagram</a>
+<a href="https://www.instagram.com/cannibalhell" target="_blank">instagram</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
