--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 House Of Guillermo [GIMO]
 Le Club [As]
 Digital Headhuntaz [aBrA]
-The Cutie [EGA]
+The Cutie [ΣGA]
 
 <a href="https://glenerson.blogspot.com/" target="_blank">blogspot</a>
 <a href="https://twitter.com/longint32" target="_blank">twitter</a>
@@ -22,7 +22,7 @@ The Cutie [EGA]
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
 
 Babylon 21.20.666.676, Z0r
-11/6/2018
+11/28/2018
 
 </pre>
 </body>
