--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@ The Cutie [ΣGA]
 <a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
 
-Babylon 21.20.666.676, Z0r
-11/28/2018
+Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
 
 </pre>
 </body>
