--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body style="background-color:#FFFFFF">
 <pre>
 
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/me.png" alt="me">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/profilepic.png" alt="profilepic">
   
 #####################
 ## alcopaul's page ##
