--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <pre>
 
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms">
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/profilepic.png" alt="profilepic">
+<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/syrotorashi.jpg" alt="profilepic">
   
 #####################
 ## alcopaul's page ##
