--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@ House Of Guillermo [GIMO]
 Le Club [As]
 Digital Headhuntaz [aBrA]
 The Cutie [ΣGA]
+Sparrow Unit [NPA]
+ZELOTES NI ISA [CYoN]
+CHURCH OF KATRINA [CQK]
+Brigada Ocho [bIIX]
 
 <a href="https://glenerson.blogspot.com/" target="_blank">blogspot</a>
-<a href="https://twitter.com/longint32" target="_blank">twitter</a>
+<a href="https://twitter.com/w32perrun" target="_blank">twitter</a>
 <a href="https://www.instagram.com/cannibalhell" target="_blank">instagram</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
 
 Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
+11/15/2019
 
 </pre>
 </body>
