--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/syrotorashi.jpg" alt="profilepic">
   
 #####################
-## alcopaul's page ##
+## alCoPaUL's page ##
 #####################
 
 House Of Guillermo [GIMO]
@@ -23,7 +23,7 @@ Brigada Ocho [bIIX]
 <a href="https://twitter.com/w32perrun" target="_blank">twitter</a>
 <a href="https://www.instagram.com/cannibalhell" target="_blank">instagram</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
-<a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
+<a href="https://soundcloud.com/w32perrun" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
 
 Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
