--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Brigada Ocho [bIIX]
 <a href="https://glenerson.blogspot.com/" target="_blank">blogspot</a>
 <a href="https://twitter.com/w32perrun" target="_blank">twitter</a>
 <a href="https://www.instagram.com/cannibalhell" target="_blank">instagram</a>
+<a href="https://www.youtube.com/c/alcopaul" target="_blank">youtube</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://soundcloud.com/w32perrun" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
