--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ Brigada Ocho [bIIX]
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://soundcloud.com/w32perrun" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
-<a href="https://keyboardkarate.w32perrun.pictures" target="_blank">micro.blog/a>
-<a href="http://badromans.com" target="_blank">bad romansr</a>
+<a href="http://keyboardkarate.w32perrun.pictures" target="_blank">micro.blog</a>
+<a href="http://badromans.com" target="_blank">bad romans</a>
 
 Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
 4/2/2020
