--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body style="background-color:#FFFFFF">
 <pre>
 
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms">
-<img src="https://raw.githubusercontent.com/alcopaul/perrun/gh-pages/syrotorashi.jpg" alt="profilepic">
+<img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms">
+<img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/syrotorashi.jpg" alt="profilepic">
   
 #####################
 ## alCoPaUL's page ##
