--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@ The Cutie [ΣGA]
 Sparrow Unit [NPA]
 ZELOTES NI ISA [CYoN]
 CHURCH OF KATRINA [CQK]
-Brigada Ocho [bIIX]
+Brigada Ocho [b8]
 
 <a href="https://glenerson.blogspot.com/" target="_blank">blogspot</a>
-<a href="https://twitter.com/w32perrun" target="_blank">twitter</a>
+<a href="https://twitter.com/alc0paul" target="_blank">twitter</a>
 <a href="https://www.instagram.com/cannibalhell" target="_blank">instagram</a>
 <a href="https://www.youtube.com/c/alcopaul" target="_blank">youtube</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
 <a href="https://soundcloud.com/w32perrun" target="_blank">soundcloud</a>
 <a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
-<a href="http://keyboardkarate.w32perrun.pictures" target="_blank">micro.blog</a>
 <a href="http://badromans.com" target="_blank">bad romans</a>
+<a href="http://www.perrun.su" target="_blank">perrun.su</a>
+<a href="http://www.pasig.com.kg" target="_blank">moskva-karadarya-pasig</a>
 
 Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
-4/2/2020
+1/2/2021
 
 </pre>
 </body>
