--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Brigada Ocho [b8]
 <a href="http://badromans.com" target="_blank">bad romans</a>
 <a href="http://www.perrun.su" target="_blank">perrun.su</a>
 <a href="http://www.pasig.com.kg" target="_blank">moskva-karadarya-pasig</a>
+<a href="http://w32perrun.pictures" target="_blank">first ever url virus infecting pictures</a>
 
 Babylon 0037:0728:0055:5600:0976:0676:0669:0666, ZOr
 1/2/2021
