--- a/index.html
+++ b/index.html
@@ -5,42 +5,29 @@
 <meta content="FrontPage.Editor.Document" name="ProgId">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head>
 <body vlink="#ffffff" alink="#ffffff" link="#ffffff" bgcolor="#000000">
-
-
-<p><img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms"></p>
-
-<p><img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/syrotorashi.jpg" alt="profilepic"></p>
-
+<p><img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/fathershousemanyrooms.png" alt="fathershousemanyrooms"></p><p><img src="https://raw.githubusercontent.com/alcopaul/W32.Perrun/gh-pages/syrotorashi.jpg" alt="profilepic"></p>
 <p><strong><strike><font face="Tahoma" color="#ffffff">alcopaul's 
 shack</font></strike></strong></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
 <font face="Tahoma" size="2" color="#FFFFFF">anima (please handle 
 with care)</font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://www.computerworld.com/article/2576115/mcafee--new-virus-is-first-to-infect-image-files.html">McAfee: New virus is first to infect image files</a></font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">brigada ocho e-zines</font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://github.com/alcopaul/BrigadaOchoZines">download all issues</a></font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">the batch.net project</font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://pastebin.com/ghgSxJzM">what is batch.net?</a></font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">useful links</font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="http://www.perrun.su">http://www.perrun.su</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="http://www.pasig.com.kg">http://www.pasig.com.kg</a></font></p>
-<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="http://fatimidtemplars.badromans.com">http://fatimidtemplars.badromans.com</a></font></p>
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://www.soundcloud.com/6PIG">https://www.soundcloud.com/6PIG</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="http://youtube.w32perrun.pictures">http://youtube.w32perrun.pictures</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://archive.org">https://archive.org</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" size="2"><a href="https://winworldpc.com/home">https://winworldpc.com/home</a></font></p>
@@ -50,20 +37,17 @@ with care)</font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="https://docs.microsoft.com/en-us/">http://docs.microsoft.com/en-us/</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2"><a href="http://w32perrun.pictures">and the first ever url virus infecting pictures</a></font></p>
 <hr>
-
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">contact: <a href="mailto:alcopaul@yahoo.com">alcopaul@yahoo.com</a></font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">updated: december 29, 2002</font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">recent update: january 20, 2021</font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-
 <p align="right">
-<a href="https://twitter.com/alc0paul" target="_blank">twitter</a>
-<a href="https://www.instagram.com/cannibalhell/" target="_blank">instagram</a>
+<a href="https://twitter.com/gimo1956" target="_blank">twitter</a>
+<a href="https://www.instagram.com/syrotorashi" target="_blank">instagram</a>
 <a href="http://alcopaul.tumblr.com/" target="_blank">tumblr</a>
-<a href="https://glenerson.wordpress.com/" target="_blank">wordpress</a>
-<a href="https://soundcloud.com/alcopaul" target="_blank">soundcloud</a>
+<a href="https://cannibalhell.wordpress.com/" target="_blank">wordpress</a>
+<a href="https://soundcloud.com/w32perrun" target="_blank">soundcloud</a>
 <a href="http://glenerson.blogspot.com/" target="_blank">blogspot</a>
 </p></body></html>
-
