--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ with care)</font></p>
 <hr>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">contact: <a href="mailto:alcopaul@yahoo.com">alcopaul@yahoo.com</a></font></p>
-<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">updated: december 29, 2002</font></p>
-<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">recent update: january 20, 2021</font></p>
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">last updated (from archive.org): december 29, 2002</font></p>
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font face="Tahoma" color="#ffffff" size="2">recent update: february 4, 2022</font></p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 <p align="right">
